<resources>
    <string name="app_name">MemeBoard</string>
    <string name="btn_upload">Upload</string>
    <string name="fileNotSelected">No file selected</string>
    <string name="memeTitle">Meme Title</string>
    <string name="uploadMeme">Upload Meme</string>
    <string name="showMemesButton">Show Memes</string>
    <string-array name="soundNames">
        <item>Atharva_laugh</item>
        <item>Athrva_vedya</item>
        <item>I_am_in_danger</item>
        <item>Motivation</item>
        <item>Nachiket_fav</item>
        <item>OG_vedya</item>
        <item>Rajat</item>
        <item>Rajat_allharam</item>
        <item>Rajat_vedya</item>
        <item>Sandesh</item>
        <item>GitHub_info</item>
    </string-array>
</resources>